--- a/Atm_Project.ipynb
+++ b/Atm_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "Atm_Project.ipynb",
-      "authorship_tag": "ABX9TyOMe8auhOg2/TJm7vZYeg3i",
+      "authorship_tag": "ABX9TyPuLUqJtfTSHq6+qkeQ3KWc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "ATM [Console Based]\n",
+        " 1. withdraw\n",
+        " 2. Deposit\n",
+        " 3. Pin Generation\n",
+        " 4. Mini statement"
+      ],
+      "metadata": {
+        "id": "j_qYorm7928D"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -35,28 +48,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pVw1gVccTJx-",
-        "outputId": "aeb08629-e588-4d45-a16c-bfaf9a74ef3f"
+        "outputId": "0b8c4de1-ec09-4c31-cac7-79e30ee7a364"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Choose the required option: \n",
-            "1. Withdraw\n",
-            "2. Deposit\n",
-            "3. Pin Generation\n",
-            "4. Mini statement\n",
-            "5. Exit\n",
-            "1\n",
-            "******************************\n",
-            "Withdraw\n",
-            "Enter your account number: 501\n",
-            "Welcome jayadeep\n",
-            "Enter your Pin: 2508\n",
-            "Enter amount to withdraw: 20000\n",
-            "Insufficient Balance\n",
-            "******************************\n",
             "Choose the required option: \n",
             "1. Withdraw\n",
             "2. Deposit\n",
@@ -78,13 +76,28 @@
             "3. Pin Generation\n",
             "4. Mini statement\n",
             "5. Exit\n",
+            "1\n",
+            "******************************\n",
+            "Withdraw\n",
+            "Enter your account number: 501\n",
+            "Welcome jayadeep\n",
+            "Enter your Pin: 2508\n",
+            "Enter amount to withdraw: 20000\n",
+            "Insufficient Balance\n",
+            "******************************\n",
+            "Choose the required option: \n",
+            "1. Withdraw\n",
+            "2. Deposit\n",
+            "3. Pin Generation\n",
+            "4. Mini statement\n",
+            "5. Exit\n",
             "2\n",
             "******************************\n",
             "Deposit\n",
             "Enter your account number: 503\n",
             "Welcome Jackson\n",
             "Enter your Pin: 9876\n",
-            "Enter amount to Deposit: 1500\n",
+            "Enter amount to Deposit: 3500\n",
             "Deposit Successfull\n",
             "******************************\n",
             "Choose the required option: \n",
@@ -146,7 +159,7 @@
             "Enter your account number: 503\n",
             "Welcome Jackson\n",
             "Enter Your Pin: 9876\n",
-            "Balance: 1500\n",
+            "Balance: 3500\n",
             "******************************\n",
             "Choose the required option: \n",
             "1. Withdraw\n",
@@ -262,6 +275,13 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "zJYy2YBu91YJ"
+      }
     }
   ]
 }
